--- a/src/sass/modules/_post.scss
+++ b/src/sass/modules/_post.scss
@@ -1,6 +1,4 @@
 .post {
-  margin: -$grid-gutter-width 0;
-  padding: $grid-gutter-width 0;
   position: relative;
 
   &-container {
